@@ -1,298 +1,200 @@
 package by.it.group451001.smalian.lesson15;
 
-import java.io.*;
+import java.nio.ByteBuffer;
+import java.nio.charset.CharsetDecoder;
+import java.nio.charset.CodingErrorAction;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
+import java.util.concurrent.ConcurrentSkipListMap;
+import java.util.concurrent.ConcurrentSkipListSet;
+import java.util.stream.IntStream;
 
 public class SourceScannerC {
-    private static final int LEVENSHTEIN_COPY_THRESHOLD = 10;
-    private static final int SIZE_TOLERANCE_PERCENT = 5;
-    private static final boolean DEBUG = false;
+    private static final int THRESH = 9;
 
-    private static class JavaFile {
-        String path;
-        String cleanContent;
-        int length;
-        int hash;
+    public static void main(String[] args) throws Exception {
+        Path root = Paths.get(System.getProperty("user.dir") + System.getProperty("file.separator") + "src" + System.getProperty("file.separator"));
+        if (!Files.exists(root)) return;
 
-        JavaFile(String path, String cleanContent) {
-            this.path = path;
-            this.cleanContent = cleanContent;
-            this.length = cleanContent.length();
-            this.hash = cleanContent.hashCode();
-        }
-    }
-
-    public static void main(String[] args) throws IOException {
-        long startTime = System.currentTimeMillis();
-        log("=== SourceScannerC начало ===");
-
-        String src = System.getProperty("user.dir") + File.separator + "src" + File.separator;
-        Path srcPath = Paths.get(src);
-
-        if (!Files.exists(srcPath)) {
-            log("Каталог src не найден");
-            return;
+        List<FileData> files = new ArrayList<>();
+        try (var walk = Files.walk(root)) {
+            walk.filter(Files::isRegularFile).filter(p -> p.toString().endsWith(".java")).forEach(p -> {
+                String txt = readUtf8Safe(p);
+                if (txt == null) return;
+                if (txt.contains("@Test") || txt.contains("org.junit.Test")) return;
+                txt = removeComments(txt);
+                txt = stripPkgImportLines(txt);
+                txt = collapseCtlToSpace(txt).trim();
+                files.add(new FileData(root.relativize(p).toString(), txt));
+            });
         }
 
-        List<JavaFile> javaFiles = scanAndCleanFiles(srcPath);
-        log("Найдено файлов: " + javaFiles.size());
+        files.sort(Comparator.comparing(f -> f.path));
 
-        if (javaFiles.isEmpty()) {
-            log("Java файлы не найдены");
-            return;
-        }
+        Map<Integer, List<FileData>> byHash = new HashMap<>();
+        for (FileData f : files) byHash.computeIfAbsent(f.text.hashCode(), k -> new ArrayList<>()).add(f);
 
-        javaFiles.sort((a, b) -> Integer.compare(a.length, b.length));
-        log("Файлы отсортированы по размеру");
-
-        findAndPrintCopies(javaFiles);
-
-        long elapsed = System.currentTimeMillis() - startTime;
-        log("=== Завершено за " + elapsed + "ms ===");
-    }
-
-    private static void log(String msg) {
-        if (DEBUG) {
-            System.err.println("[LOG] " + msg);
-        }
-    }
-
-    private static List<JavaFile> scanAndCleanFiles(Path srcPath) throws IOException {
-        List<JavaFile> result = Collections.synchronizedList(new ArrayList<>());
-
-        try (var stream = Files.walk(srcPath)) {
-            stream.filter(path -> path.toString().endsWith(".java")).parallel().forEach(path -> {
-                try {
-                    String content = readFileWithErrorHandling(path);
-                    if (content != null && !content.contains("@Test") && !content.contains("org.junit.Test")) {
-                        String cleaned = cleanContent(content);
-                        String relativePath = srcPath.relativize(path).toString();
-                        result.add(new JavaFile(relativePath, cleaned));
+        ConcurrentSkipListMap<String, ConcurrentSkipListSet<String>> copies = new ConcurrentSkipListMap<>();
+        List<FileData> uniques = new ArrayList<>();
+        for (List<FileData> group : byHash.values()) {
+            for (int i = 0; i < group.size(); i++) {
+                for (int j = i + 1; j < group.size(); j++) {
+                    FileData a = group.get(i), b = group.get(j);
+                    if (a.text.equals(b.text)) {
+                        copies.computeIfAbsent(a.path, k -> new ConcurrentSkipListSet<>()).add(b.path);
+                        copies.computeIfAbsent(b.path, k -> new ConcurrentSkipListSet<>()).add(a.path);
                     }
-                } catch (Exception e) { }});
+                }
+            }
+            uniques.add(group.get(0));
         }
 
-        return result;
+        Map<Integer, List<FileData>> buckets = new HashMap<>();
+        for (FileData f : uniques) buckets.computeIfAbsent(f.len, k -> new ArrayList<>()).add(f);
+
+        int n = uniques.size();
+        IntStream.range(0, n).parallel().forEach(i -> {
+            FileData a = uniques.get(i);
+            for (int d = -THRESH; d <= THRESH; d++) {
+                List<FileData> bucket = buckets.get(a.len + d);
+                if (bucket == null) continue;
+                for (FileData b : bucket) {
+                    if (a.path.compareTo(b.path) >= 0) continue;
+                    if (!quickSigMatch(a, b)) continue;
+                    int dist = levenshteinWithLimit(a.text, b.text, THRESH);
+                    if (dist <= THRESH) {
+                        copies.computeIfAbsent(a.path, k -> new ConcurrentSkipListSet<>()).add(b.path);
+                        copies.computeIfAbsent(b.path, k -> new ConcurrentSkipListSet<>()).add(a.path);
+                    }
+                }
+            }
+        });
+
+        for (var e : copies.entrySet()) {
+            System.out.println(e.getKey());
+            for (String p : e.getValue()) System.out.println(p);
+        }
     }
 
-    private static String readFileWithErrorHandling(Path path) {
+    private static String readUtf8Safe(Path p) {
         try {
-            return Files.readString(path, StandardCharsets.UTF_8);
-        } catch (java.nio.charset.MalformedInputException e) {
-            try {
-                return Files.readString(path, StandardCharsets.ISO_8859_1);
-            } catch (IOException e2) {
-                return null;
-            }
-        } catch (IOException e) {
+            byte[] b = Files.readAllBytes(p);
+            CharsetDecoder dec = StandardCharsets.UTF_8.newDecoder()
+                    .onMalformedInput(CodingErrorAction.REPORT)
+                    .onUnmappableCharacter(CodingErrorAction.REPORT);
+            return dec.decode(ByteBuffer.wrap(b)).toString();
+        } catch (Exception ex) {
             return null;
         }
     }
 
-    private static String cleanContent(String content) {
-        content = removePackageAndImports(content);
-        content = removeComments(content);
-        content = normalizeWhitespace(content);
-        return content.trim();
-    }
-
-    private static String removePackageAndImports(String content) {
-        StringBuilder result = new StringBuilder();
-        String[] lines = content.split("\n");
-
-        for (String line : lines) {
-            String trimmed = line.trim();
-            if (!trimmed.startsWith("package ") && !trimmed.startsWith("import ")) {
-                result.append(line).append("\n");
-            }
+    private static String stripPkgImportLines(String s) {
+        StringBuilder sb = new StringBuilder();
+        for (String line : s.split("\\R")) {
+            String t = line.trim();
+            if (t.startsWith("package") || t.startsWith("import")) continue;
+            sb.append(line).append('\n');
         }
-
-        return result.toString();
+        return sb.toString();
     }
 
-    private static String removeComments(String content) {
-        StringBuilder result = new StringBuilder();
-        int i = 0;
-        int n = content.length();
-
-        while (i < n) {
-            if (i + 1 < n && content.charAt(i) == '/' && content.charAt(i + 1) == '/') {
-                i += 2;
-                while (i < n && content.charAt(i) != '\n') {
-                    i++;
-                }
-                if (i < n) {
-                    result.append('\n');
-                    i++;
-                }
-            } else if (i + 1 < n && content.charAt(i) == '/' && content.charAt(i + 1) == '*') {
-                i += 2;
-                while (i + 1 < n) {
-                    if (content.charAt(i) == '*' && content.charAt(i + 1) == '/') {
-                        i += 2;
-                        break;
-                    }
-                    if (content.charAt(i) == '\n') {
-                        result.append('\n');
-                    }
-                    i++;
-                }
-            } else if (content.charAt(i) == '"' || content.charAt(i) == '\'') {
-                char quote = content.charAt(i);
-                result.append(content.charAt(i));
-                i++;
-                while (i < n) {
-                    char c = content.charAt(i);
-                    result.append(c);
-                    if (c == quote && (i == 0 || content.charAt(i - 1) != '\\')) {
-                        i++;
-                        break;
-                    }
-                    i++;
-                }
-            } else {
-                result.append(content.charAt(i));
-                i++;
-            }
-        }
-
-        return result.toString();
-    }
-
-    private static String normalizeWhitespace(String content) {
-        StringBuilder result = new StringBuilder();
-
-        for (int i = 0; i < content.length(); i++) {
-            char c = content.charAt(i);
+    private static String collapseCtlToSpace(String s) {
+        StringBuilder sb = new StringBuilder(s.length());
+        boolean sp = false;
+        for (char c : s.toCharArray()) {
             if (c < 33) {
-                if (result.length() == 0 || result.charAt(result.length() - 1) != ' ') {
-                    result.append(' ');
-                }
+                if (!sp) sb.append(' ');
+                sp = true;
             } else {
-                result.append(c);
+                sb.append(c);
+                sp = false;
             }
         }
-
-        return result.toString();
+        return sb.toString();
     }
 
-    private static int levenshteinDistance(String s1, String s2) {
-        int len1 = s1.length();
-        int len2 = s2.length();
-
-        int lenDiff = Math.abs(len1 - len2);
-        if (lenDiff >= LEVENSHTEIN_COPY_THRESHOLD) {
-            return Integer.MAX_VALUE;
-        }
-
-        if (len1 == 0) return len2;
-        if (len2 == 0) return len1;
-
-        if (len1 < len2) {
-            String tmp = s1;
-            s1 = s2;
-            s2 = tmp;
-            len1 = s1.length();
-            len2 = s2.length();
-        }
-
-        int[] prev = new int[len2 + 1];
-        int[] curr = new int[len2 + 1];
-
-        for (int j = 0; j <= len2; j++) {
-            prev[j] = j;
-        }
-
-        for (int i = 1; i <= len1; i++) {
-            curr[0] = i;
-            int minInRow = Integer.MAX_VALUE;
-
-            for (int j = 1; j <= len2; j++) {
-                int cost = (s1.charAt(i - 1) == s2.charAt(j - 1)) ? 0 : 1;
-                int val = Math.min(
-                        Math.min(curr[j - 1] + 1, prev[j] + 1),
-                        prev[j - 1] + cost
-                );
-                curr[j] = val;
-
-                if (val < minInRow) {
-                    minInRow = val;
+    private static String removeComments(String s) {
+        StringBuilder out = new StringBuilder(s.length());
+        boolean inStr = false, inChar = false, inSL = false, inML = false, esc = false;
+        for (int i = 0; i < s.length(); i++) {
+            char c = s.charAt(i);
+            char n = i + 1 < s.length() ? s.charAt(i + 1) : 0;
+            if (inSL) {
+                if (c == '\n') { inSL = false; out.append(c); }
+            } else if (inML) {
+                if (c == '*' && n == '/') { inML = false; i++; }
+            } else if (inStr) {
+                out.append(c);
+                if (esc) esc = false;
+                else if (c == '\\') esc = true;
+                else if (c == '"') inStr = false;
+            } else if (inChar) {
+                out.append(c);
+                if (esc) esc = false;
+                else if (c == '\\') esc = true;
+                else if (c == '\'') inChar = false;
+            } else {
+                if (c == '/' && n == '/') { inSL = true; i++; }
+                else if (c == '/' && n == '*') { inML = true; i++; }
+                else {
+                    out.append(c);
+                    if (c == '"') inStr = true;
+                    else if (c == '\'') inChar = true;
                 }
             }
-
-            if (minInRow >= LEVENSHTEIN_COPY_THRESHOLD) {
-                return Integer.MAX_VALUE;
-            }
-
-            int[] temp = prev;
-            prev = curr;
-            curr = temp;
         }
-
-        return prev[len2];
+        return out.toString();
     }
 
-    private static void findAndPrintCopies(List<JavaFile> files) {
-        Map<Integer, Set<Integer>> copies = new HashMap<>();
-        int n = files.size();
-        int totalComparisons = 0;
+    private static boolean quickSigMatch(FileData a, FileData b) {
+        int match = 0;
+        if (a.sig1 == b.sig1) match++;
+        if (a.sig2 == b.sig2) match++;
+        if (a.sig3 == b.sig3) match++;
+        return match >= 2;
+    }
 
-        log("Начало поиска копий для " + n + " файлов");
-
-        for (int i = 0; i < n; i++) {
-            JavaFile fileI = files.get(i);
-
-            for (int j = i + 1; j < n; j++) {
-                JavaFile fileJ = files.get(j);
-
-                int maxSize = Math.max(fileI.length, fileJ.length);
-                int minSize = Math.min(fileI.length, fileJ.length);
-
-
-                if ((maxSize - minSize) * 100 > maxSize * SIZE_TOLERANCE_PERCENT) {
-                    break;
-                }
-
-                if (fileI.hash == fileJ.hash && fileI.cleanContent.equals(fileJ.cleanContent)) {
-                    copies.computeIfAbsent(i, k -> new TreeSet<>()).add(j);
-                    copies.computeIfAbsent(j, k -> new TreeSet<>()).add(i);
-                    totalComparisons++;
-                    continue;
-                }
-
-                int distance = levenshteinDistance(fileI.cleanContent, fileJ.cleanContent);
-
-                if (distance < LEVENSHTEIN_COPY_THRESHOLD) {
-                    copies.computeIfAbsent(i, k -> new TreeSet<>()).add(j);
-                    copies.computeIfAbsent(j, k -> new TreeSet<>()).add(i);
-                }
-
-                totalComparisons++;
+    private static int levenshteinWithLimit(String a, String b, int limit) {
+        if (a.equals(b)) return 0;
+        int n = a.length(), m = b.length();
+        if (Math.abs(n - m) > limit) return limit + 1;
+        if (n == 0) return m;
+        if (m == 0) return n;
+        if (n > m) { String t = a; a = b; b = t; n = a.length(); m = b.length(); }
+        int[] prev = new int[m + 1], cur = new int[m + 1];
+        for (int j = 0; j <= m; j++) prev[j] = j;
+        for (int i = 1; i <= n; i++) {
+            cur[0] = i;
+            char ca = a.charAt(i - 1);
+            int rowMin = cur[0];
+            for (int j = 1; j <= m; j++) {
+                int cost = ca == b.charAt(j - 1) ? 0 : 1;
+                int v = Math.min(Math.min(cur[j - 1] + 1, prev[j] + 1), prev[j - 1] + cost);
+                cur[j] = v;
+                if (v < rowMin) rowMin = v;
             }
-
-            if ((i + 1) % 100 == 0) {
-                log("Обработано файлов: " + (i + 1) + "/" + n);
-            }
+            if (rowMin > limit) return limit + 1;
+            int[] t = prev; prev = cur; cur = t;
         }
+        return prev[m];
+    }
 
-        log("Всего сравнений: " + totalComparisons);
-
-        List<Integer> filesWithCopies = new ArrayList<>(copies.keySet());
-        filesWithCopies.sort((a, b) -> files.get(a).path.compareTo(files.get(b).path));
-
-        for (int i : filesWithCopies) {
-            System.out.println(files.get(i).path);
-            Set<Integer> copyIndices = new TreeSet<>(copies.get(i));
-            List<String> copyPaths = new ArrayList<>();
-            for (int copyIdx : copyIndices) {
-                copyPaths.add(files.get(copyIdx).path);
-            }
-            copyPaths.sort(String::compareTo);
-            for (String copyPath : copyPaths) {
-                System.out.println(copyPath);
-            }
+    private static class FileData {
+        final String path;
+        final String text;
+        final int len;
+        final int sig1, sig2, sig3;
+        FileData(String path, String text) {
+            this.path = path;
+            this.text = text;
+            this.len = text.length();
+            int s = Math.min(64, Math.max(1, len));
+            sig1 = text.substring(0, Math.min(s, len)).hashCode();
+            sig2 = text.substring(len / 2, Math.min(len / 2 + s, len)).hashCode();
+            sig3 = text.substring(Math.max(0, len - s), len).hashCode();
         }
     }
 }
